--- a/src/components/Layout/MainNavigation.module.css
+++ b/src/components/Layout/MainNavigation.module.css
@@ -1,7 +1,9 @@
 .header {
   width: 100%;
   height: 5rem;
-  background-color: #38015c;
+  /* background-color: #38015c; */
+  /* background-color: #008080; */
+  background-color: #4b4b4b;;
   /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); */
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
