--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
   font-family: "Nunito Sans";
   /* font-family: 'Open Sans', 'Lato', sans-serif; */
   margin: 0;
-  background-color: #e7f8f8;
+  /* background-color: #e7f8f8; */
+  background-color: white;
 }
 
 h1,
