--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -1,78 +1,76 @@
-.auth {
-  margin: 3rem auto;
-  width: 95%;
-  max-width: 25rem;
-  border-radius: 6px;
-  /* background-color: #38015c; */
-  background-color: #4b4b4b;
-  /* background-color: #008080; */
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  padding: 1rem;
-  text-align: center;
-  color: white;
+.forms {
+    height: 100%;
+    padding-top: 3rem;
+    /* background-image: url(https://hips.hearstapps.com/hmg-prod/images/two-cyclists-descent-1529528894.jpg);
+    background-position: bottom;
+    background-size: cover; */
 }
 
-.auth h1 {
-  text-align: center;
-  color: white;
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: #4b4b4b;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
 }
 
-.control {
-  margin-bottom: 0.5rem;
+.form-element {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.control label {
-  display: block;
-  color: white;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
+.form-container h1 {
+    color: white;
 }
 
-.control input {
-  font: inherit;
-  background-color: #f1e1fc;
-  color: #38015c;
-  border-radius: 4px;
-  border: 1px solid white;
-  width: 100%;
-  text-align: left;
-  padding: 0.25rem;
+.form-element input {
+    width: 100%;
+    font: inherit;
+    border-radius: 6px;
+    padding: 0.25rem;
+    margin-bottom: 1rem;
 }
 
-.actions {
-  margin-top: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.submit-button {
+    background-color: #aa65d8;
+    border: 1px solid #aa65d8;
+    border-radius: 6px;
+    cursor: pointer;
+    font: inherit;
+    color: white;
+    padding: 0.5rem 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
-.actions button {
-  cursor: pointer;
-  font: inherit;
-  color: white;
-  background-color: #9f5ccc;
-  border: 1px solid #9f5ccc;
-  /* background-color: #2a2a2a;
-  border: 1px solid #2a2a2a; */
-  border-radius: 4px;
-  padding: 0.5rem 2.5rem;
+.submit-button:hover {
+    background-color: #9418e7;
+    border: 1px solid #9418e7;
 }
 
-.actions button:hover {
-  background-color: #873abb;
-  border-color: #873abb;
+.toggle-button {
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font: inherit;
 }
 
-.actions .toggle {
-  margin-top: 1rem;
-  background-color: transparent;
-  /* color: #9f5ccc; */
-  color: white;
-  border: none;
-  padding: 0.15rem 1.5rem;
+.toggle-button:hover {
+    color: #aa65d8;
 }
 
-.actions .toggle:hover {
-  background-color: transparent;
-  color: #ae82cc;
+.send-request-paragraph {
+    color: white;
+}
+
+.submit-error-info {
+    color: #ec1919;
+    margin: 0
 }
