--- a/src/components/AllTrips/AllTrips.module.css
+++ b/src/components/AllTrips/AllTrips.module.css
@@ -4,3 +4,9 @@
     margin: 0 auto;
     padding: 0;
   }
+
+.no-trips-found {
+  margin: 1rem auto;
+  text-align: center;
+  font-size: 1.25rem;
+}
