--- a/src/components/AllTrips/DateBox.module.css
+++ b/src/components/AllTrips/DateBox.module.css
@@ -1,4 +1,4 @@
-.expense-date {
+.trip-date {
     display: flex;
     flex-direction: column;
     width: 5.5rem;
@@ -11,16 +11,16 @@
     justify-content: center;
   }
   
-  .expense-date__month {
+  .trip-date-month {
     font-size: 0.75rem;
     font-weight: bold;
   }
   
-  .expense-date__year {
+  .trip-date-year {
     font-size: 0.75rem;
   }
   
-  .expense-date__day {
+  .trip-date-day {
     font-size: 1.5rem;
     font-weight: bold;
   }
