--- a/src/components/Layout/NavigationBar.module.css
+++ b/src/components/Layout/NavigationBar.module.css
@@ -1,4 +1,4 @@
-.header {
+.form-navigation {
   width: 100%;
   height: 5rem;
   /* background-color: #38015c; */
@@ -12,14 +12,13 @@
   padding: 0 2% 0 10%;
 }
 
-.logo {
-  /* font-family: 'Lato', sans-serif; */
+.app-title {
   font-size: 2rem;
   color: white;
   margin: 0;
 }
 
-.header ul {
+.link-container {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -27,38 +26,33 @@
   align-items: baseline;
 }
 
-.header li {
-  margin: 0 1rem;
-}
 
-.header a {
+.form-navigation a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+  margin: 0 1rem;
 }
 
-.header button {
+.form-navigation button {
   font: inherit;
   background-color: transparent;
-  border: 1px solid white;
+  border: none;
   color: white;
   font-weight: bold;
   padding: 0.5rem 1.5rem;
-  border-radius: 6px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-.header a:hover {
-  color: #c291e2;
+.form-navigation a:hover {
+  color: #aa65d8;
 }
 
-.header button:hover {
-  background-color: #c291e2;
-  color: #38015c;
+.form-navigation button:hover {
+  color: #aa65d8;
 }
 
 li a.active {
-  /* text-decoration-line: underline;
-  text-decoration-thickness: 3px; */
   font-size: 1.5rem;
 }
