--- a/src/components/TripDetailsAll/TripInformation.module.css
+++ b/src/components/TripDetailsAll/TripInformation.module.css
@@ -11,13 +11,13 @@
 
 .form-container {
   display: flex;
+  align-items: flex-end;
 }
 
 .form-container input {
   width: 10rem;
   font: inherit;
   padding: 0.5rem 0;
-  margin-right: 1rem;
   font-weight: bold;
   border-radius: 6px;
   text-align: center;
@@ -37,4 +37,18 @@
 .form-container button:hover {
   background-color: #9418e7;
   border: 1px solid #9418e7;
+}
+
+.form-container label {
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.label-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 1rem;
 }
