--- a/src/components/NewTrip/DropdownList.module.css
+++ b/src/components/NewTrip/DropdownList.module.css
@@ -1,4 +1,4 @@
-.new-trip__control {
+.new-trip-control {
   margin-bottom: 2rem;
   padding: 1.5rem 1.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
