--- a/src/components/LogRegister/LogRegisterForm.module.css
+++ b/src/components/LogRegister/LogRegisterForm.module.css
@@ -25,6 +25,11 @@
     align-items: center;
 }
 
+.form-title {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
 .form-container h1 {
     color: white;
 }
@@ -45,7 +50,7 @@
     font: inherit;
     color: white;
     padding: 0.5rem 1.5rem;
-    margin-top: 1rem;
+    margin-top: 0.25rem;
     margin-bottom: 1rem;
 }
 
