--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  font-family: "Nunito Sans";
+  /* font-family: "Nunito Sans"; */
+  font-family: "Public Sans";
   /* font-family: 'Open Sans', 'Lato', sans-serif; */
   margin: 0;
   /* background-color: #e7f8f8; */
@@ -19,7 +20,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito Sans";
+  font-family: "Public Sans";
   /* font-family: "Lato", sans-serif; */
 }
 
@@ -37,3 +38,7 @@ h6 {
   width: 80%;
   margin: 5rem auto;
 } */
+
+.root-element-overflow {
+  overflow: hidden;
+}
