--- a/src/components/Layout/MainContent.module.css
+++ b/src/components/Layout/MainContent.module.css
@@ -1,4 +1,5 @@
 .main {
     margin: 1.5rem 3rem;
-    height: calc(100vh - 5rem - 3rem)
+    margin-top: 3rem;
+    height: calc(100vh - 55.97px - 4.5rem)
 }
