--- a/src/components/NewTrip/DropdownList.module.css
+++ b/src/components/NewTrip/DropdownList.module.css
@@ -40,7 +40,7 @@
 .form-container select {
   font: inherit;
   padding: 0.5rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   border-radius: 6px;
   text-align: center;
 }
@@ -48,14 +48,14 @@
 .form-container input {
   font: inherit;
   padding: 0.5rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   border-radius: 6px;
   text-align: center;
 }
 
 .form-container label {
   margin-bottom: 0.3rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-style: italic;
 }
 
