--- a/src/components/TripDetailsAll/TripDetailsAll.module.css
+++ b/src/components/TripDetailsAll/TripDetailsAll.module.css
@@ -24,3 +24,9 @@
   background-color: #9418e7;
   border: 1px solid #9418e7;
 }
+
+.tabs-container {
+  width: 33%;
+  margin: 2rem auto;
+  margin-top: 0rem;
+}
