--- a/src/components/AllTrips/SingleTrip.module.css
+++ b/src/components/AllTrips/SingleTrip.module.css
@@ -6,7 +6,7 @@
   padding: 0.75rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
-  background-color: #4b4b4b;
+  background-color: #706d6d;;
 }
 
 .link-button {
