--- a/src/components/Posts/AllPosts.module.css
+++ b/src/components/Posts/AllPosts.module.css
@@ -1,7 +1,23 @@
 .all-posts-container {
-    width: 100%;
-    display: flex;
-    flex-grow: 1;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 80%;
+  /* display: flex;
+    flex-direction: column; */
+  overflow: scroll;
+  flex-grow: 1;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+.no-posts-found {
+  margin: 1rem auto;
+  text-align: center;
+  font-size: 1.25rem;
+}
+
+.list-of-posts {
+  list-style: none;
+  width: 85%;
+  margin: 0 auto;
+  padding: 0;
 }
