--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -4,7 +4,7 @@
 
 .posts {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   height: 100%;
 }
