--- a/src/components/NewTrip/DropdownList.module.css
+++ b/src/components/NewTrip/DropdownList.module.css
@@ -20,14 +20,18 @@
   cursor: pointer;
   font: inherit;
   color: white;
-  background-color: #aa65d8;
-  border: 1px solid #aa65d8;
+  /* background-color: #aa65d8;
+  border: 1px solid #aa65d8; */
+  background-color: #0275d8;
+  border: 1px solid #0275d8;
   border-radius: 4px;
 }
 
 .form-container button:hover {
-  background-color: #9418e7;
-  border: 1px solid #9418e7;
+  /* background-color: #9418e7;
+  border: 1px solid #9418e7; */
+  background-color: #138af1;
+  border: 1px solid #138af1;
 }
 
 .form-container button:disabled {
