--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@ h6 {
 }
 
 .nav-link.active {
-  color: #aa65d8 !important;
+  /* color: #aa65d8 !important; */
+  color: #0275d8 !important;
 }
 
 .leaflet-routing-container {
@@ -65,3 +66,11 @@ h6 {
 /* .leaflet-routing-alternatives-container table {
   display: none !important;
 } */
+
+/* .navigation-bar-bootstrap {
+  background-color: #e8ded1 !important; 
+} */
+
+.nav-item button {
+  color: black !important;
+}
