--- a/src/index.css
+++ b/src/index.css
@@ -59,13 +59,13 @@ h6 {
   margin-top: 0.25rem !important;
 }
 
-/* .leaflet-routing-alternatives-container {
+.leaflet-routing-alternatives-container {
   display: none !important;
-} */
+}
 
-/* .leaflet-routing-alternatives-container table {
+.leaflet-routing-alternatives-container table {
   display: none !important;
-} */
+}
 
 /* .navigation-bar-bootstrap {
   background-color: #e8ded1 !important; 
