--- a/src/components/Layout/MainContent.module.css
+++ b/src/components/Layout/MainContent.module.css
@@ -1,5 +1,5 @@
-.main {
-    margin: 1.5rem 3rem;
-    margin-top: 2rem;
-    height: calc(100vh - 56px - 3.5rem)
+.main-container {
+  margin: 1.5rem 3rem;
+  margin-top: 2rem;
+  height: calc(100vh - 56px - 3.5rem);
 }
