--- a/src/components/NewTrip/NewTrip.module.css
+++ b/src/components/NewTrip/NewTrip.module.css
@@ -8,3 +8,10 @@
   align-items: center;
   height: 100%;
 }
+
+.map-details-container {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+  width: 100%;
+}
