--- a/src/components/Map/Map.module.css
+++ b/src/components/Map/Map.module.css
@@ -1,6 +1,6 @@
 .map {
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    flex-grow: 1;
     /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     border-radius: 12px; */
   }
