--- a/src/components/NewTrip/NewTrip.module.css
+++ b/src/components/NewTrip/NewTrip.module.css
@@ -15,3 +15,10 @@
   flex-grow: 1;
   width: 100%;
 }
+
+.map-only-container {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
