--- a/src/components/TripDetailsAll/PreferencesDescriptionJoin.module.css
+++ b/src/components/TripDetailsAll/PreferencesDescriptionJoin.module.css
@@ -1,6 +1,6 @@
 .content-container {
     width: 28%;
-    height: 100%;
+    height: 400px;
     /* padding: 1rem; */
     /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     border-radius: 12px; */
