--- a/src/components/TripDetailsAll/TripInformationSingle.module.css
+++ b/src/components/TripDetailsAll/TripInformationSingle.module.css
@@ -1,10 +1,11 @@
 .new-trip-control {
   margin-bottom: 2rem;
-  padding: 1.5rem 1.5rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
+  /* padding: 1.5rem 1.5rem; */
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 6px; */
   background-color: white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -14,7 +15,7 @@
   align-items: flex-end;
 }
 
-.form-container input {
+/* .form-container input {
   width: 10rem;
   font: inherit;
   padding: 0.5rem 0;
@@ -29,30 +30,30 @@
   cursor: pointer;
   font: inherit;
   color: white;
-  /* background-color: #aa65d8;
-  border: 1px solid #aa65d8; */
+  background-color: #aa65d8;
+  border: 1px solid #aa65d8;
   background-color: #0275d8;
   border: 1px solid #0275d8;
   border-radius: 4px;
-}
+} */
 
-.form-container button:hover {
-  /* background-color: #9418e7;
-  border: 1px solid #9418e7; */
+/* .form-container button:hover {
+  background-color: #9418e7;
+  border: 1px solid #9418e7;
   background-color: #138af1;
   border: 1px solid #138af1;
-}
+} */
 
-.form-container label {
+/* .form-container label {
   margin-bottom: 0.3rem;
   font-weight: bold;
   font-style: italic;
-}
+} */
 
-.label-box {
+/* .label-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-right: 1rem;
-}
+} */
