--- a/src/components/AllTrips/FilterTrips.module.css
+++ b/src/components/AllTrips/FilterTrips.module.css
@@ -1,35 +1,36 @@
 .new-trip__control {
+  margin-bottom: 2rem;
+  /* padding: 1.5rem 1.5rem; */
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 6px; */
+  background-color: white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .form-container {
-  margin-bottom: 0.5rem;
-  padding: 1rem 1.5rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
   display: flex;
   align-items: flex-end;
 }
 
-.form-container button {
+/* .form-container button {
   padding: 0.5rem 1.5rem;
   margin-left: 1.5rem;
   cursor: pointer;
   font: inherit;
   color: white;
-  /* background-color: #aa65d8;
-  border: 1px solid #aa65d8; */
+  background-color: #aa65d8;
+  border: 1px solid #aa65d8;
   background-color: #0275d8;
   border: 1px solid #0275d8;
   border-radius: 4px;
 }
 
 .form-container button:hover {
-  /* background-color: #9418e7;
-  border: 1px solid #9418e7; */
+  background-color: #9418e7;
+  border: 1px solid #9418e7;
   background-color: #138af1;
   border: 1px solid #138af1;
 }
@@ -39,7 +40,7 @@
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
-}
+} */
 
 .form-container select {
   font: inherit;
@@ -71,3 +72,14 @@
   justify-content: center;
   margin-right: 1rem;
 }
+
+.start-date input[type="date"]:before {
+  content: "Start date:";
+}
+
+.end-date input[type="date"]:before {
+  content: "End date:";
+}
+
+
+
