--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,24 +1,58 @@
-.greeting-text {
-  margin: 0;
-  text-align: center;
-  font-size: 5rem;
+.home-page-container {
+  display: flex;
+  height: 100%;
+  padding: 3rem;
+  justify-content: center;
+  align-items: center;
 }
 
-.home-page-container {
+.home-page-description {
   height: 100%;
+  width: 40%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-.images-container {
+.home-page-description .description {
+  font-size: 1.25rem;
+  /* color: #b2b1b1; */
+  color: #545151;
+  margin-top: 1rem;
+}
+
+.home-page-description .title {
+  font-size: 2rem;
+  font-family: sans-serif !important;
+  /* color: white; */
+  color: black;
+  margin-bottom: 1rem;
+}
+
+.home-page-images {
+  height: 100%;
+  padding: 1rem;
+  padding-left: 5rem;
   flex-grow: 1;
   display: flex;
-  margin: 4rem 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.authors-footer {
-  font-size: 1.25rem;
-  text-align: center;
+.home-page-images img {
+  height: 100%;
+  width: 100%;
+}
+
+.car-container {
+  height: 50%;
+  width: 100%;
+}
+
+.bike-container {
+  height: 50%;
+  width: 100%;
 }
 
 .car-background {
