--- a/src/components/Posts/AllPosts.module.css
+++ b/src/components/Posts/AllPosts.module.css
@@ -6,7 +6,7 @@
   overflow: scroll;
   flex-grow: 1;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); */
 }
 
 .no-posts-found {
