--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,15 @@ h6 {
 .nav-link.active {
   /* color: #aa65d8 !important; */
   color: #0275d8 !important;
+  /* color: #19dafa !important; */
+}
+
+.dropdown-toggle {
+  color: #b2b1b1 !important;
+}
+
+.navigation-bar-bootstrap {
+  background-color: #42455a !important;
 }
 
 .leaflet-routing-container {
