--- a/src/components/AdminPanel/AllUsers.module.css
+++ b/src/components/AdminPanel/AllUsers.module.css
@@ -1,12 +1,8 @@
 .all-posts-container {
-  width: 100%;
-  height: 70%;
-  /* display: flex;
-    flex-direction: column; */
-  overflow: auto;
-  flex-grow: 1;
+  width: 75%;
+  height: 85%;
+  overflow: scroll;
   border-radius: 8px;
-  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); */
 }
 
 .no-posts-found {
