--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,14 +5,17 @@
   padding-left: 5rem;
   justify-content: center;
   align-items: center;
+  background-image:url(../../assets/travel.png);
+  /* background-position: 0% 13%; */
+  background-position: center;
 }
 
 .home-page-description {
   height: 100%;
-  width: 40%;
+  width: 25%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
 }
 
 .home-page-description .description {
@@ -20,6 +23,7 @@
   /* color: #b2b1b1; */
   color: #545151;
   margin-top: 1rem;
+  text-align: center;
 }
 
 .home-page-description .title {
