--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -30,3 +30,41 @@
   text-align: center;
   font-size: 1.25rem;
 }
+
+table {
+  border-radius: 4px;
+  border: 2px solid rgb(214, 212, 212);
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 1.8rem;
+}
+
+th {
+  background-color: #ddf1ff;
+  font-size: 0.88rem;
+  font-weight: 600;
+  color: #4a5d73;;
+  text-align: center;
+  border: 1px solid #ddf1ff;
+  padding: 11px 20px;
+  width: auto;
+}
+
+td {
+  border: 1px solid #ddf1ff;
+  padding: 11px 20px;
+  font-size: 0.85rem;
+  font-weight: 600;
+  color: #4a5d73;
+  text-align: center;
+}
+
+tr:nth-child(even) td {
+  background-color: rgba(250, 250, 250);
+}
+
+tr:nth-child(odd) td {
+  background-color: #ddf1ff;
+}
