--- a/src/components/Leaderboard/SingleUserLeaderboard.module.css
+++ b/src/components/Leaderboard/SingleUserLeaderboard.module.css
@@ -32,3 +32,20 @@
       text-align: center;
       font-size: 0.8rem;
   } */
+
+  td {
+    border: 1px solid #ddf1ff;
+    padding: 11px 20px;
+    font-size: 0.85rem;
+    font-weight: 600;
+    color: #4a5d73;
+    text-align: center;
+  }
+
+  tr:nth-child(even) td {
+    background-color: rgba(250, 250, 250);
+  }
+  
+  tr:nth-child(odd) td {
+    background-color: #ddf1ff;
+  }
