Add option to add preferences on the Profile page

--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -31,7 +31,7 @@
   font-size: 1.25rem;
 }
 
-table {
+.table-style {
   border-radius: 4px;
   border: 2px solid rgb(214, 212, 212);
   letter-spacing: 1px;
@@ -41,7 +41,7 @@ table {
   margin-top: 1.8rem;
 }
 
-th {
+.table-style th {
   background-color: #ddf1ff;
   font-size: 0.88rem;
   font-weight: 600;
@@ -52,7 +52,7 @@ th {
   width: auto;
 }
 
-td {
+.table-style td {
   border: 1px solid #ddf1ff;
   padding: 11px 20px;
   font-size: 0.85rem;
@@ -61,10 +61,10 @@ td {
   text-align: center;
 }
 
-tr:nth-child(even) td {
+.table-style tr:nth-child(even) td {
   background-color: rgba(250, 250, 250);
 }
 
-tr:nth-child(odd) td {
+.table-style tr:nth-child(odd) td {
   background-color: #ddf1ff;
 }
