--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -9,33 +9,16 @@
   height: 100%;
 }
 
-.title-container {
-  margin-bottom: 2rem;
-}
-
 .tabs-container {
   width: 66%;
   margin: 0 auto;
   margin-bottom: 1rem;
 }
 
-.all-posts-container {
-  width: 75%;
-  height: 85%;
-  border-radius: 8px;
-}
-
-.no-posts-found {
-  margin: 1rem auto;
-  text-align: center;
-  font-size: 1.25rem;
-}
-
 .table-style {
   border-radius: 4px;
-  border: 2px solid rgb(214, 212, 212);
+  border: 2px solid #d6d4d4;
   letter-spacing: 1px;
-  font-size: 0.8rem;
   width: 75%;
   margin: 0 auto;
   margin-top: 1.8rem;
@@ -44,8 +27,7 @@
 .table-style th {
   background-color: #ddf1ff;
   font-size: 0.88rem;
-  font-weight: 600;
-  color: #4a5d73;;
+  color: #4a5d73;
   text-align: center;
   border: 1px solid #ddf1ff;
   padding: 11px 20px;
@@ -56,13 +38,12 @@
   border: 1px solid #ddf1ff;
   padding: 11px 20px;
   font-size: 0.85rem;
-  font-weight: 600;
   color: #4a5d73;
   text-align: center;
 }
 
 .table-style tr:nth-child(even) td {
-  background-color: rgba(250, 250, 250);
+  background-color: white;
 }
 
 .table-style tr:nth-child(odd) td {
